# telegram_bot_jobSearch

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  README.md   ROADMAP.md  docker-compose.yml  nixpacks.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONVENTIONS.md  ROADMAP.md
src/: __main__.py  bot.py  config.py  models.py  scheduler.py  storage.py
src/handlers/: add.py  delete.py  fallback.py  list.py  remind.py  start.py  stats.py  status.py
tasks/: phase1.json  phase2.json  phase3.json
tests/: conftest.py  test_handler_add.py  test_handler_delete.py  test_handler_fallback.py  test_handler_list.py  test_handler_remind.py  test_handler_start.py  test_handler_stats.py  test_handler_status.py  test_models.py  test_scheduler.py  test_storage.py
